<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="40dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/ivClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_description"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:padding="8dp"
        app:layout_constraintLeft_toRightOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"/>


    <ImageView
        android:id="@+id/tvQtyMinus"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_add"
        app:layout_constraintTop_toBottomOf="@id/tvAddToCart"/>

    <TextView
        android:id="@+id/tvQtyCount"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:textColor="@color/black"
        app:layout_constraintRight_toLeftOf="@id/tvQtyAdd"
        app:layout_constraintLeft_toRightOf="@id/tvQtyMinus"
        app:layout_constraintTop_toBottomOf="@id/tvAddToCart"
        android:gravity="center"
        android:text="0"/>

    <TextView
        android:id="@+id/tvQtyAdd"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_minus_24"
        app:layout_constraintTop_toBottomOf="@id/tvAddToCart"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>